--- a/index.html
+++ b/index.html
@@ -395,6 +395,22 @@
                 </li>
             </ul>
         </div>
+        <div class="cont-footer-form">
+            <form class="footer-form">
+                
+                <div class="footer-label-edit">
+                    <label for="email" class="footer-label">
+                        Subscribe
+                        <input type="email" name="email" placeholder="   E-mail" class="footer-input">
+                    </label>
+                </div>
+                <button type="submit" class="footer-button">Subscribe
+                    <svg class="icon-sub" width="24" height="24">
+                        <use href="./images/icons.svg#icon-frame"></use>
+                    </svg>
+                </button>
+            </form>
+        </div>
         </div>
     </footer>
 </body>
