--- a/index.html
+++ b/index.html
@@ -396,14 +396,11 @@
             </ul>
         </div>
         <div class="cont-footer-form">
+            <p class="form-text">Subscribe</p>
             <form class="footer-form">
-                
-                <div class="footer-label-edit">
                     <label for="email" class="footer-label">
-                        Subscribe
-                        <input type="email" name="email" placeholder="   E-mail" class="footer-input">
+                        <input type="email" name="email" placeholder="E-mail" class="footer-input">
                     </label>
-                </div>
                 <button type="submit" class="footer-button">Subscribe
                     <svg class="icon-sub" width="24" height="24">
                         <use href="./images/icons.svg#icon-frame"></use>
