--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
             <p class="form-text">Subscribe</p>
             <form class="footer-form">
                     <label for="email" class="footer-label">
-                        <input type="email" name="email" placeholder="E-mail" class="footer-input">
+                        <input type="email" name="email" id="email" placeholder="E-mail" class="footer-input">
                     </label>
                 <button type="submit" class="footer-button">Subscribe
                     <svg class="icon-sub" width="24" height="24">
@@ -410,6 +410,70 @@
         </div>
         </div>
     </footer>
+    <div class="container container-modal-window">
+        <div class="modal-window">
+            <button class="close-but" type="button">
+                <svg class="close-icon" width="8" height="8">
+                    <use href="/images/icons.svg#icon-close"></use>
+                </svg>
+            </button>
+            <p class="text-modal">Leave your contacts and we will call you back</p>
+            <form action="" class="modal-form">
+                <div class="form-cont">
+                    <label for="user-name" class="modal-label">
+                        Name
+                    </label>
+                    <div class="user-cont">
+                        <svg class="user-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-person"></use>
+                        </svg>
+                        <input type="text" class="modal-input" name="user-name" id="user-name">
+                    </div>
+                </div>
+                <div class="form-cont">
+                    <label for="" class="modal-label">
+                        Phone
+                    </label>
+                    <div class="user-cont">
+                        <svg class="user-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-phone"></use>
+                        </svg>
+                        <input type="tel" class="modal-input" name="user-phone" id="user-phone">
+                    </div>
+                </div>
+                <div class="form-cont">
+                    <label for="user-mail" class="modal-label">
+                        Mail
+                    </label>
+                    <div class="user-cont">
+                        <svg class="user-icon" width="18" height="18">
+                            <use href="./images/icons.svg#icon-email"></use>
+                        </svg>
+                        <input type="email" class="modal-input" name="user-mail" id="user-mail">
+                    </div>
+                </div>
+                <div class="container-comment">
+                    <label for="user-comment" class="modal-label">
+                        Comment
+                    </label>
+                        <textarea name="user-comment" class="modal-comment" id="user-comment" placeholder="Text input"></textarea>
+                </div>
+                <div class="container-privacy">
+                    <input type="checkbox" class="privacy-input" id="user-privacy"name="user-privacy" value="true" visually-hidden>
+                    <label for="user-privacy" class="privacy-label">
+                        I accept the terms and conditions of the 
+                        <span class="privacy-span">
+                            <svg width="10" height="8" class="privacy-icon">
+                                <use href="./images/icons.svg#icon-checkbox"></use>
+                            </svg>
+                        </span>
+                        <a href="" class="privacy-link">Privacy Policy</a>
+                    </label>
+                </div>
+            </form>
+            <button class="send-button">Send</button>
+        </div>
+    </div>
 </body>
 
 </html>
