--- a/index.html
+++ b/index.html
@@ -414,31 +414,31 @@
         <div class="modal-window">
             <button class="close-but" type="button">
                 <svg class="close-icon" width="8" height="8">
-                    <use href="/images/icons.svg#icon-close"></use>
+                    <use href="./images/icons.svg#icon-close"></use>
                 </svg>
             </button>
             <p class="text-modal">Leave your contacts and we will call you back</p>
-            <form action="" class="modal-form">
+            <form action="modal" class="modal-form">
                 <div class="form-cont">
                     <label for="user-name" class="modal-label">
                         Name
                     </label>
                     <div class="user-cont">
+                        <input type="text" class="modal-input" name="user-name" id="user-name">
                         <svg class="user-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
-                        <input type="text" class="modal-input" name="user-name" id="user-name">
                     </div>
                 </div>
                 <div class="form-cont">
-                    <label for="" class="modal-label">
+                    <label for="user-phone" class="modal-label">
                         Phone
                     </label>
                     <div class="user-cont">
+                        <input type="tel" class="modal-input" name="user-phone" id="user-phone">
                         <svg class="user-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
-                        <input type="tel" class="modal-input" name="user-phone" id="user-phone">
                     </div>
                 </div>
                 <div class="form-cont">
@@ -446,10 +446,10 @@
                         Mail
                     </label>
                     <div class="user-cont">
+                        <input type="email" class="modal-input" name="user-mail" id="user-mail">
                         <svg class="user-icon" width="18" height="18">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
-                        <input type="email" class="modal-input" name="user-mail" id="user-mail">
                     </div>
                 </div>
                 <div class="container-comment">
@@ -459,7 +459,7 @@
                         <textarea name="user-comment" class="modal-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="container-privacy">
-                    <input type="checkbox" class="privacy-input" id="user-privacy"name="user-privacy" value="true" visually-hidden>
+                    <input type="checkbox" class="visually-hidden" id="user-privacy" name="user-privacy" value="true" visually-hidden>
                     <label for="user-privacy" class="privacy-label">
                         I accept the terms and conditions of the 
                         <span class="privacy-span">
