--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                     </label>
                     <div class="user-cont">
                         <input type="text" class="modal-input" name="user-name" id="user-name">
-                        <svg class="user-icon" width="18" height="18">
+                        <svg class="user-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-person"></use>
                         </svg>
                     </div>
@@ -436,18 +436,18 @@
                     </label>
                     <div class="user-cont">
                         <input type="tel" class="modal-input" name="user-phone" id="user-phone">
-                        <svg class="user-icon" width="18" height="18">
+                        <svg class="user-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-phone"></use>
                         </svg>
                     </div>
                 </div>
                 <div class="form-cont">
                     <label for="user-mail" class="modal-label">
-                        Mail
+                        Email
                     </label>
                     <div class="user-cont">
                         <input type="email" class="modal-input" name="user-mail" id="user-mail">
-                        <svg class="user-icon" width="18" height="18">
+                        <svg class="user-icon" width="18" height="24">
                             <use href="./images/icons.svg#icon-email"></use>
                         </svg>
                     </div>
@@ -459,7 +459,11 @@
                         <textarea name="user-comment" class="modal-comment" id="user-comment" placeholder="Text input"></textarea>
                 </div>
                 <div class="container-privacy">
-                    <input type="checkbox" class="visually-hidden" id="user-privacy" name="user-privacy" value="true" visually-hidden>
+                    <input type="checkbox"
+                    class="visually-hidden" 
+                    id="user-privacy" 
+                    name="user-privacy" 
+                    value="true">
                     <label for="user-privacy" class="privacy-label">
                         I accept the terms and conditions of the 
                         <span class="privacy-span">
