--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                         <a href="" class="privacy-link">Privacy Policy</a>
                     </label>
                 </div>
-            <button class="send-button">Send</button>
+            <button class="send-button" type="submit">Send</button>
             </form>
         </div>
     </div>
