--- a/index.html
+++ b/index.html
@@ -460,17 +460,17 @@
                 </div>
                 <div class="container-privacy">
                     <input type="checkbox"
-                    class="visually-hidden" 
+                    class="checkbox visually-hidden" 
                     id="user-privacy" 
                     name="user-privacy" 
                     value="true">
                     <label for="user-privacy" class="privacy-label">
-                        I accept the terms and conditions of the 
                         <span class="privacy-span">
                             <svg width="10" height="8" class="privacy-icon">
                                 <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </span>
+                        I accept the terms and conditions of the
                         <a href="" class="privacy-link">Privacy Policy</a>
                     </label>
                 </div>
