--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container container-main">
                 <h1 class="title">Effective Solutions
                 for Your Business</h1>
-            <button type="button" class="button">Order Service</button>
+            <button type="button" class="button" data-modal-open>Order Service</button>
             </div>
         </section>
 
@@ -410,9 +410,9 @@
         </div>
         </div>
     </footer>
-    <div class="container container-modal-window">
+    <div class="container container-modal-window is-hidden" data-modal>
         <div class="modal-window">
-            <button class="close-but" type="button">
+            <button class="close-but" type="button" data-modal-close>
                 <svg class="close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
@@ -466,7 +466,7 @@
                     value="true">
                     <label for="user-privacy" class="privacy-label">
                         <span class="privacy-span">
-                            <svg width="10" height="8" class="privacy-icon">
+                            <svg width="14" height="14" class="privacy-icon">
                                 <use href="./images/icons.svg#icon-checkbox"></use>
                             </svg>
                         </span>
@@ -478,6 +478,7 @@
             </form>
         </div>
     </div>
+<script src="./js/modal.js"></script>
 </body>
 
 </html>
