--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="container container-main">
                 <h1 class="title">Effective Solutions
                 for Your Business</h1>
-            <button type="button" class="button" data-modal-open>Order Service</button>
+            <button type="button" class="button">Order Service</button>
             </div>
         </section>
 
@@ -410,9 +410,9 @@
         </div>
         </div>
     </footer>
-    <div class="container container-modal-window is-hidden" data-modal>
+    <div class="container container-modal-window is-open">
         <div class="modal-window">
-            <button class="close-but" type="button" data-modal-close>
+            <button class="close-but" type="button">
                 <svg class="close-icon" width="8" height="8">
                     <use href="./images/icons.svg#icon-close"></use>
                 </svg>
@@ -478,7 +478,6 @@
             </form>
         </div>
     </div>
-<script src="./js/modal.js"></script>
 </body>
 
 </html>
